--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "meuprojeto",
-  "version": "1.0.0",
+  "name": "pratica03",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
